// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`i18nDirective inserts correct translation html content 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Default message"
  i18n-id="id"
>
  Default message
</div>
`;

exports[`i18nDirective inserts correct translation html content with values 1`] = `"default-message word"`;

exports[`i18nDirective inserts correct translation html content with values 2`] = `"default-message anotherWord"`;

exports[`i18nDirective sanitizes defaultMessage 1`] = `
<div
  class="ng-scope ng-isolate-scope"
  i18n-default-message="Dangerous default message, {value}"
  i18n-id="id"
  i18n-values="{ value: '<div i18n-id=\\"id2\\" i18n-default-message=\\"<script></script>inner message\\" />' }"
>
  Dangerous default message, 
  <div
    class="ng-scope ng-isolate-scope"
    i18n-default-message="<script></script>inner message"
    i18n-id="id2"
  >
    inner message
  </div>
</div>
`;
